--- a/css/XSActivityStyle.css
+++ b/css/XSActivityStyle.css
@@ -24,11 +24,11 @@
     border-color: rgba(0, 0, 0, 0.3);
     border-radius: 5px;
     background-color: rgba(138, 138, 138, 0.02);
-    transition: margin 0.2s;
+    transition: margin background-color 0.2s;
 }
 
 .kaomoji-menu .kaomoji-container .kaomoji:hover {
     margin: 1px;
     cursor: pointer;
-    background-color: rgba(138, 138, 138, 0.1);
+    background-color: rgba(138, 138, 138, 0.35);
 }
