--- a/main/XSActivityStyle.css
+++ b/main/XSActivityStyle.css
@@ -24,4 +24,11 @@
     border-color: rgba(0, 0, 0, 0.3);
     border-radius: 5px;
     background-color: rgba(138, 138, 138, 0.02);
+    transition: margin background-color 0.2s;
+}
+
+.kaomoji-menu .kaomoji-container .kaomoji:hover {
+    margin: 1px;
+    cursor: pointer;
+    background-color: rgba(138, 138, 138, 0.35);
 }
