--- a/css/XSActivityStyle.css
+++ b/css/XSActivityStyle.css
@@ -125,4 +125,10 @@
     background-color: rgba(200, 175, 189, 0.95);
     border-radius: 1em;
     padding: 1em;
+
+    transition: all 0.3s ease;
+}
+.kaomoji-button:hover {
+    width: 2em;
+    height: 2em;
 }
