修复菜单选择按钮异常的问题，修复前置条件判断

--- a/css/XSActivityStyle.css
+++ b/css/XSActivityStyle.css
@@ -4,9 +4,9 @@
     right: 5%;
     bottom: 15%;
     width: 40%;
-    max-height: 40%;
+    height: 40%;
     font-size: small;
-    display: flex;
+    display: block;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -88,7 +88,6 @@
 }
 
 .kaomoji-menu .kaomoji-container .kaomoji:hover {
-    margin: 9px;
     cursor: pointer;
     background-color: rgba(138, 138, 138, 0.35);
 }
