deploy: 9f14914a7f8a27b8a088307b2a3d6e0783ef9efb

--- a/main/XSActivityStyle.css
+++ b/main/XSActivityStyle.css
@@ -4,9 +4,9 @@
     right: 5%;
     bottom: 15%;
     width: 40%;
-    max-height: 40%;
+    height: 40%;
     font-size: small;
-    display: flex;
+    display: block;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -52,16 +52,22 @@
 
 
 .kaomoji-menu .kaomoji-title-close {
-    display: inline;
-    text-align: center;
-    margin-right: .5%;
-    width: 2em;
+    border: none;
+    padding: 0;
+    background: none;
     cursor: pointer;
 }
 
-.kaomoji-menu .kaomoji-title-close:hover {
-    color: rgba(0, 0, 0, 0.7);
+.kaomoji-menu .kaomoji-title-close svg circle {
+    display: block;
+    /* 确保SVG元素填充按钮的整个空间 */
+
+    transition: all 0.3s ease;
 }
+.kaomoji-menu .kaomoji-title-close svg circle:hover {
+    fill: rgba(100, 8, 25, 0.95);
+}
+
 
 .kaomoji-menu .kaomoji-container {
     display: flex;
@@ -82,7 +88,6 @@
 }
 
 .kaomoji-menu .kaomoji-container .kaomoji:hover {
-    margin: 9px;
     cursor: pointer;
     background-color: rgba(138, 138, 138, 0.35);
 }
@@ -127,12 +132,13 @@
     width: 2.5vh;
     height: 2.5vh;
     align-items: center;
-    background-color: rgba(200, 175, 189, 0.95);
+    background-color: rgba(200, 175, 189, 0.251);
     border-style: none;
     border-radius: 50%;
     padding: 0.5vh;
 
-    transition: all 0.3s ease;
+    transition: width 0.3s, height 0.3s, background-color 0.3s ease;
+    transform-origin: center center;
 }
 
 .kaomoji-button:hover {
