--- a/dev/XSActivityStyle.css
+++ b/dev/XSActivityStyle.css
@@ -6,10 +6,9 @@
     width: 40%;
     height: 40%;
     font-size: small;
-    display: block;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     background-color: rgba(200, 175, 189, 0.95);
     border-radius: 0.5em;
     margin: 1.5em;
@@ -71,7 +70,7 @@
 
 .kaomoji-menu .kaomoji-container {
     display: flex;
-    overflow-y: scroll;
+    overflow-y: auto;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
