--- a/css/XSActivityStyle.css
+++ b/css/XSActivityStyle.css
@@ -146,3 +146,64 @@
     height: 4vh;
     background-color: rgba(215, 133, 181, 0.95);
 }
+
+
+
+.ChatMessageLocalMessage .trance-message {
+    background-color: rgba(215, 133, 181, 0.95);
+
+}
+
+.ChatMessageLocalMessage .trance-message {
+    padding: 0.5em;
+    margin: .5em;
+    border-radius: 0.8em;
+
+    color: rgb(178, 140, 200);
+    font-size: 2.5em;
+    font-style: italic;
+    vertical-align: middle; /* 垂直居中 */
+    min-height: 3em;
+    height: auto;
+    line-height: 1.2;
+    background: linear-gradient(to right, rgba(208, 106, 255, 0.25), rgba(255, 59, 78, 0.25));
+    filter: blur(1px);
+
+    animation: circleAnimation 10s ease-in-out infinite; /* 持续时间5秒，线性运动，无限循环 */
+
+    transition: all 0.3s ease;
+}
+.ChatMessageLocalMessage .trance-message:hover {
+    color: rgb(47, 32, 56);
+    background: linear-gradient(to right, rgba(208, 106, 255, 0.511),rgba(255, 59, 79, 0.538));
+    animation-play-state: paused;
+}
+
+@keyframes circleAnimation {
+    0% {
+        transform:translateX(0) rotate(0deg);
+        filter: blur(1px);
+        opacity: 0;
+    }
+    15% {
+        opacity: 1;
+    }
+    25% {
+        transform:translateX(-10px) rotate(-2deg);
+        filter: blur(.5px);
+    }
+    75% {
+        transform:translateX(10px) rotate(1deg);
+        filter: blur(3px);
+        opacity: 0.9;
+    }
+    90% {
+        opacity: 0.3;
+        filter: blur(10px);
+    }
+    100% {
+        transform:translateX(0) rotate(0deg);
+        filter: blur(1px);
+        opacity: 0.0;
+    }
+}
