将右键菜单扩展到动作消息 修复表情按钮的层级问题

--- a/css/XSActivityStyle.css
+++ b/css/XSActivityStyle.css
@@ -132,6 +132,7 @@
     cursor: pointer;
     width: 2.5vh;
     height: 2.5vh;
+    z-index: 1000;
     align-items: center;
     background-color: rgba(200, 175, 189, 0.251);
     border-style: none;
@@ -270,6 +271,7 @@
     width: 6%;
     margin: 5px;
     padding: 5px;
+    z-index: 1000;
 
     flex-direction: column;
     font-size: medium;
